Fix broken layout

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -30,10 +30,11 @@ body {
     -o-font-feature-settings: "kern" 1;
     font-feature-settings: "kern" 1;
     font-kerning: normal;
-    overflow-x: hidden;
-    width: 100%;
+    min-width: $content-width;
 
     @include media-query($on-palm) {
+        min-width: auto;
+        overflow-x: hidden;
         font-size: $small-font-size;
     }
 }
@@ -185,6 +186,7 @@ table {
     @extend %clearfix;
 
     @include media-query($on-palm) {
+        width: 100%;
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
